--- a/styles/header.css
+++ b/styles/header.css
@@ -21,7 +21,7 @@
   }
   
   header .highlighted a {
-    background-color: #7f56d9;
+    background-color: #285430;
     color: #fff;
     padding: 8px 15px;
   }
@@ -59,6 +59,7 @@
 
   .collaborators {
     margin-left: 30px;
+    justify-content: space-between;
   }
   
   .collaborators .company-icons {
@@ -68,3 +69,11 @@
   .collaborators .company-icons img {
     margin-left: 30px;
   }
+
+  header .highlighted-2 {
+    background-color: #E5D9B6;
+    color: #fff;
+    padding: 8px 15px;
+  }
+
+  
