--- a/styles/main.css
+++ b/styles/main.css
@@ -49,12 +49,10 @@
 
   p {
     margin: 0;
-    text-indent: 3ch;
-    line-height: 2;
+    line-height: 2px;
   }
   
   p.pilcrow {
-     text-indent: 12px;
      display: inline;
   }
   p.pilcrow + p.pilcrow::before {
