--- a/styles/main.css
+++ b/styles/main.css
@@ -9,7 +9,11 @@
 * {
     box-sizing: border-box;
   }
-  
+
+  .banner {
+    max-width: 400px;
+  }
+
   body {
     padding: 0;
     margin: 0;
@@ -20,7 +24,13 @@
   a {
     text-decoration: none;
   }
-  
+
+h1,
+h2,
+h3 {
+  margin: 0;
+}
+
   .container {
     margin: 0 auto;
     width: 1400px;
@@ -49,7 +59,6 @@
 
   p {
     margin: 0;
-    line-height: 2px;
   }
   
   p.pilcrow {
@@ -58,6 +67,7 @@
   p.pilcrow + p.pilcrow::before {
     content: " ¶ ";
   }
+
   /* color 1 - #7F56D9 */
   /* color 2 - #F9F5FF */
   /* color 3 - #D0D5DD */
