--- a/styles/section.css
+++ b/styles/section.css
@@ -1,5 +1,5 @@
 section {
-  padding: 70px 0 0;
+    padding: 70px 0 0 0;
 }
 
 section .section-info {
@@ -25,7 +25,7 @@ section .section-info .category {
 section .section-info .title {
     color: black;
     font-weight: 600;
-    font-size: 16px;
+    font-size: 24px;
     line-height: 44px;
 }
 
@@ -96,4 +96,48 @@ section .articles .article-card .title {
 
 .expirience {
     color: #fff;
+}
+
+.card {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 36px;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    max-width: 450px;
+    border: 2px solid #e2e2e2;
+    background-color: #fff;
+    padding: 30px 40px;
+    flex-grow: 1;
+    border-radius: 12px;
+    box-shadow: 0px 67.1144px 109.061px rgba(0, 0, 0, 0.05)
+}
+
+.explore {
+    color: blueviolet;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
+    margin: 0 0 12px 0;
+}
+
+.popular {
+    color: black;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 44px;
+}
+
+.sections {
+    margin: 40 px 0 0 0;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+}
+
+section .section-2 {
+    text-align: left;
+    max-width: 768px;
+    margin: 0 auto;
 }
