--- a/styles/header.css
+++ b/styles/header.css
@@ -1,3 +1,9 @@
+header {
+  position: sticky;
+  top: 0;
+  opacity: 1;
+}
+
 .search {
     border: 1px solid #d0d5dd;
     border-radius: 8px;
@@ -18,6 +24,7 @@
     border: 3px solid rgba(127, 86, 217, 0.2);
     border-radius: 8px;
     overflow: hidden;
+    position: sticky;
   }
   
   header .highlighted a {
@@ -28,6 +35,7 @@
   
   header .general-links {
     margin-right: 75px;
+    position: sticky;
   }
   
   header .general-links a {
