--- a/styles/section.css
+++ b/styles/section.css
@@ -143,11 +143,41 @@ section .section-2 {
     margin: 0 auto;
 }
 
-.kartinka {
-    float: right;
-    position: absolute;
-    top: 60px;
-    left: 750px;
+
+.banner-image {
+    border-radius: 50%;
+    background-color: #7F56D9;
+    position: relative;
     width: 495px;
-    height: 300px;
-}
+    height: 495px;
+    left: 700px;
+    bottom: 300px;
+  }
+
+  .banner-image .girl {
+    position: absolute;
+    bottom: 0;
+    left: 95px;
+    width: 366px;
+    height: 432px;
+  }
+
+  .banner-image .k5 {
+    position: absolute;
+    left: 400px;
+    top: 100px;
+  }
+
+  .banner-image .k250 {
+    position: absolute;
+    top: 200px;
+    width: 150px;
+    left: -50px;
+  }
+
+  .banner-image .k2 {
+    position: absolute;
+    left: 400px;
+    top: 400px;
+    width: 150px;
+  }
