--- a/styles/header.css
+++ b/styles/header.css
@@ -2,6 +2,12 @@ header {
   position: sticky;
   top: 0;
   opacity: 1;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  min-width: 300px;
+  height: 40px;
 }
 
 .search {
@@ -133,4 +139,10 @@ header {
     background-color: #285430;
     color: #fff;
     padding: 8px 15px;
+  }
+
+  @media screen and (max-width: 1200px) {
+    .header .search {
+      display: none;
+    }
   }
