--- a/styles/header.css
+++ b/styles/header.css
@@ -168,21 +168,21 @@ header {
   }
 
   @media screen and (max-width: 1200px) {
-    header .highlighted {
+    div .highlighted {
       width: 400px;
       flex-direction: column;
     }
   }
 
   @media screen and (max-width: 768px) {
-    header .highlighted {
+    div .highlighted {
       width: 1000px;
       flex-direction: column;
     }
   }
 
   @media screen and (max-width: 1200px) {
-    header .banner-image {
+    div .banner-image {
       display: none;
     }
   }
