--- a/styles/section.css
+++ b/styles/section.css
@@ -1,291 +1,273 @@
 section {
-    padding: 70px 0 0 0;
-    position: relative;
+  padding: 70px 0 0 0;
+  position: relative;
 }
 
 section .section-info {
-    text-align: center;
-    max-width: 768px;
-    margin: 0 auto;
+  text-align: center;
+  max-width: 768px;
+  margin: 0 auto;
 }
 
 section .section-info.left-align {
-    text-align: left;
-    max-width: none;
-    margin: 0;
-  }
+  text-align: left;
+  max-width: none;
+  margin: 0;
+}
 
 section .section-info .category {
-    color: blueviolet;
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 24px;
-    margin: 0 0 12px 0;
+  color: blueviolet;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  margin: 0 0 12px 0;
 }
 
 section .section-info .title {
-    color: black;
-    font-weight: 600;
-    font-size: 24px;
-    line-height: 44px;
+  color: black;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 44px;
 }
 
 section .articles {
-    margin: 40 px 0 0 0;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
+  margin: 40 px 0 0 0;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
 }
 
 section .articles .article-card {
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 36px;
-    color: black;
-    display: flex;
-    flex-direction: column;
-    max-width: 450px;
-    border: 2px solid #e2e2e2;
-    background-color: #fff;
-    padding: 30px 40px;
-    flex-grow: 1;
-    border-radius: 12px;
-    box-shadow: 0px 67.1144px 109.061px rgba(0, 0, 0, 0.05)
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 36px;
+  color: black;
+  display: flex;
+  flex-direction: column;
+  max-width: 450px;
+  border: 2px solid #e2e2e2;
+  background-color: #fff;
+  padding: 30px 40px;
+  flex-grow: 1;
+  border-radius: 12px;
+  box-shadow: 0px 67.1144px 109.061px rgba(0, 0, 0, 0.05);
 }
 
 section .articles .article-card:not(:last-child) {
-    margin: 0 40px 0 0;
+  margin: 0 40px 0 0;
 }
 
 section .articles .article-card:first-child {
-    background-color: blueviolet;
+  background-color: blueviolet;
 }
 
 section .articles .article-card:first-child .title {
-    color: #fff;
+  color: #fff;
 }
 
-
 section .articles .article-card .title {
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 36px;
-    color: #101828;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 36px;
+  color: #101828;
 }
 
 .article-card .more {
-    color: #646464;
-    font-size: 16px;
-    padding: 20px 0;
-    font-weight: 400;
-    line-height: 28px;
+  color: #646464;
+  font-size: 16px;
+  padding: 20px 0;
+  font-weight: 400;
+  line-height: 28px;
 }
 
 .user {
-    color: #fff;
-    font-size: 16px;
-    padding: 20px 0;
-    font-weight: 400;
-    line-height: 28px;
+  color: #fff;
+  font-size: 16px;
+  padding: 20px 0;
+  font-weight: 400;
+  line-height: 28px;
 }
 
 .learnmore {
-    font-size: 18px;
-    font-weight: 500;
-    color: #6941c6;
+  font-size: 18px;
+  font-weight: 500;
+  color: #6941c6;
 }
 
 .expirience {
-    color: #fff;
+  color: #fff;
 }
 
 .card {
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 36px;
-    color: black;
-    display: flex;
-    flex-direction: column;
-    max-width: 450px;
-    border: 2px solid #e2e2e2;
-    background-color: #fff;
-    padding: 30px 40px;
-    flex-grow: 1;
-    border-radius: 12px;
-    box-shadow: 0px 67.1144px 109.061px rgba(0, 0, 0, 0.05)
+  /* font-weight: 700;
+  font-size: 24px;
+  line-height: 36px;
+  color: black;
+  display: flex;
+  flex-direction: column;
+  max-width: 450px;
+  border: 2px solid #e2e2e2;
+  background-color: #fff;
+  padding: 30px 40px;
+  flex-grow: 1;
+  border-radius: 12px;
+  box-shadow: 0px 67.1144px 109.061px rgba(0, 0, 0, 0.05); */
 }
 
 .explore {
-    color: blueviolet;
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 24px;
-    margin: 0 0 12px 0;
+  color: blueviolet;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  margin: 0 0 12px 0;
 }
 
 .popular {
-    color: black;
-    font-weight: 600;
-    font-size: 24px;
-    line-height: 44px;
+  color: black;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 44px;
 }
 
 .sections {
-    margin: 40 px 0 0 0;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
+  margin: 40 px 0 0 0;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
 }
 
 section .section-2 {
-    text-align: left;
-    max-width: 768px;
-    margin: 0 auto;
+  text-align: left;
 }
-
 
 .banner-image {
-    border-radius: 50%;
-    background-color: #7F56D9;
-    position: relative;
-    width: 495px;
-    height: 495px;
-    left: 700px;
-    bottom: 300px;
-  }
-
-  .banner-image .girl {
-    position: absolute;
-    bottom: 0;
-    left: 95px;
-    width: 366px;
-    height: 432px;
-  }
-
-  .banner-image .k5 {
-    position: absolute;
-    left: 400px;
-    top: 100px;
-  }
-
-  .banner-image .k250 {
-    position: absolute;
-    top: 200px;
-    width: 150px;
-    left: -50px;
-  }
-
-  .banner-image .k2 {
-    position: absolute;
-    left: 400px;
-    top: 400px;
-    width: 150px;
-  }
-
-  .section .titorsec {
-    width: 768px;
-    font-family: 'Inter';
-    letter-spacing: -0.02em;
-    text-align: center;
-    max-width: 768px;
-    margin: 0 auto;
+  border-radius: 50%;
+  background-color: #7f56d9;
+  position: relative;
+  width: 495px;
+  height: 495px;
+  left: 700px;
+  bottom: 300px;
 }
 
-  .tutors {
-    text-align: center;
-    font-weight: 600;
-    height: 24px;
-    font-size: 16px;
-    line-height: 24px;
-    color: #6941c6;
-    flex: none;
-    order: 0;
-    align-self: stretch;
-    flex-grow: 0;
-  }
+.banner-image .girl {
+  position: absolute;
+  bottom: 0;
+  left: 95px;
+  width: 366px;
+  height: 432px;
+}
 
-  .meet {
-    text-align: center;
-    font-weight: 600;
-    height: 44px;
-    font-size: 36px;
-    line-height: 44px;
-    color: #101828;
-    flex: none;
-    order: 1;
-    align-self: stretch;
-    flex-grow: 0;
-  }
+.banner-image .k5 {
+  position: absolute;
+  left: 400px;
+  top: 100px;
+}
 
-  .tutorsec .text {
-    text-align: center;
-    height: 60px;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 30px;
-    color: #667085;
-    flex: none;
-    order: 1;
-    align-self: stretch;
-    flex-grow: 0;
-  }
+.banner-image .k250 {
+  position: absolute;
+  top: 200px;
+  width: 150px;
+  left: -50px;
+}
 
-  .col {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 24px;
-    width: 276px;
-    height: 340px;
-    background: #F9FAFB;
-    flex: none;
-    order: 0;
-    align-self: stretch;
-    flex-grow: 1;
-  }
+.banner-image .k2 {
+  position: absolute;
+  left: 400px;
+  top: 400px;
+  width: 150px;
+}
 
-  .card-title {
-    width: 228px;
-    height: 28px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 28px;
-    text-align: center;
-    flex: none;
-    order: 0;
-    align-self: stretch;
-    flex-grow: 0;
-  }
+.section .titorsec {
+  width: 768px;
+  font-family: "Inter";
+  letter-spacing: -0.02em;
+  text-align: center;
+  max-width: 768px;
+  margin: 0 auto;
+}
 
-  .card-text {
-    width: 228px;
-    height: 48px;
-    font-family: 'Inter';
-    font-size: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    text-align: center;
-    color: #6941c6;
-    flex: none;
-    order: 1;
-    align-self: stretch;
-    flex-grow: 0;
-  }
+.tutors {
+  text-align: center;
+  font-weight: 600;
+  height: 24px;
+  font-size: 16px;
+  line-height: 24px;
+  color: #6941c6;
+  flex: none;
+  order: 0;
+  align-self: stretch;
+  flex-grow: 0;
+}
 
-  .text-muted {
-    text-align: center;
-    width: 228px;
-    height: 72px;
-    font-family: 'Inter';
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    color: #667085;
-    flex: none;
-    order: 1;
-    align-self: stretch;
-    flex-grow: 0;
-  }
+.meet {
+  text-align: center;
+  font-weight: 600;
+  height: 44px;
+  font-size: 36px;
+  line-height: 44px;
+  color: #101828;
+  flex: none;
+  order: 1;
+  align-self: stretch;
+  flex-grow: 0;
+}
+
+.tutorsec .text {
+  text-align: center;
+  height: 60px;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 30px;
+  color: #667085;
+  flex: none;
+  order: 1;
+  align-self: stretch;
+  flex-grow: 0;
+}
+
+.card-title {
+  width: 228px;
+  height: 28px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 28px;
+  text-align: center;
+  flex: none;
+  order: 0;
+  align-self: stretch;
+  flex-grow: 0;
+}
+
+.card-text {
+  width: 228px;
+  height: 48px;
+  font-family: "Inter";
+  font-size: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: center;
+  color: #6941c6;
+  flex: none;
+  order: 1;
+  align-self: stretch;
+  flex-grow: 0;
+}
+
+.text-muted {
+  text-align: center;
+  width: 228px;
+  height: 72px;
+  font-family: "Inter";
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #667085;
+  flex: none;
+  order: 1;
+  align-self: stretch;
+  flex-grow: 0;
+}
