--- a/styles/header.css
+++ b/styles/header.css
@@ -8,6 +8,8 @@ header {
   justify-content: space-between;
   min-width: 300px;
   height: 40px;
+  z-index: 999;
+  background-color: #fff;
 }
 
 .search {
