--- a/styles/section.css
+++ b/styles/section.css
@@ -98,20 +98,16 @@ section .articles .article-card .title {
   color: #fff;
 }
 
-.card {
-  /* font-weight: 700;
+.custom-card {
+  font-weight: 700;
   font-size: 24px;
   line-height: 36px;
-  color: black;
   display: flex;
   flex-direction: column;
-  max-width: 450px;
   border: 2px solid #e2e2e2;
   background-color: #fff;
   padding: 30px 40px;
-  flex-grow: 1;
   border-radius: 12px;
-  box-shadow: 0px 67.1144px 109.061px rgba(0, 0, 0, 0.05); */
 }
 
 .explore {
@@ -136,7 +132,7 @@ section .articles .article-card .title {
   align-items: flex-start;
 }
 
-section .section-2 {
+section .intro {
   text-align: left;
 }
 
@@ -178,7 +174,7 @@ section .section-2 {
   width: 150px;
 }
 
-.section .titorsec {
+.section .sectiontutor {
   width: 768px;
   font-family: "Inter";
   letter-spacing: -0.02em;
@@ -213,7 +209,7 @@ section .section-2 {
   flex-grow: 0;
 }
 
-.tutorsec .text {
+.sectiontutor .text {
   text-align: center;
   height: 60px;
   font-weight: 400;
