--- a/styles/main.css
+++ b/styles/main.css
@@ -72,9 +72,7 @@ h3 {
     color: gray;
   }
 
-  /* color 1 - #7F56D9 */
-  /* color 2 - #F9F5FF */
-  /* color 3 - #D0D5DD */
-  /* color 4 - #101828 */
-  /* color 5 - rgba(36, 187, 140, .02) */
+  body {
+    background-color: #eee;
+  }
   
